# Hackme

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  .~lock.teams.csv#  Dockerfile  Final_List.csv  README.md  SETUP.md  api_globals.py  aventus-website.json  aventusauth.json  hackme-service-account.json  main.py  pyproject.toml  qrcode_gen.py  qrcode_generate.py  requirements.txt  setup.py  teams.csv  test_main.http
.github/workflows/: aventus-AutoDeployTrigger-bbcd2ce3-6129-4d93-b5e6-b6f57044f3a8.yml  hackme-azure-AutoDeployTrigger-a5080cd7-d05e-4d70-af7d-0fde22df3a4c.yml
admin/: dashboard.py  utils.py
app/: api_globals.py  main.py  settings.py
app/admin/: dashboard.py  dependencies.py  utils.py
app/auth/: google_sso.py
app/data/: Final_List.csv
app/participants/: register.py
app/static/css/: dashboard.css  login.css  master_checkin.css  update_status.css
app/static/js/: master_checkin.js  update_status.js
app/templates/: dashboard.html  login.html  master_checkin.html  registration_status.html  update_status.html
auth/: google_sso.py  router.py  utils.py
participants/: register.py
routers/: login.py  login_form.py
static/css/: checkin_out.css  dashboard.css  login.css  master_checkin.css  update_status.css
static/js/: checkin_out.js  master_checkin.js
templates/: barcode_reader_page.html  base.html  checkin_out.html  dashboard.html  home.html  list_teams.html  login.html  master_checkin.html  scan_page_first_page.html  status_all_team_member_page.html  status_result.html  update.html  update_status.html
